--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,24 @@
-# Игнорировать html файлы
-*.html
-# Но конкретно foo.html не игнорировать
-!foo.html
-# Игнорировать rar файлы в корне проекта
-# Допустим файл /temp/main.rar не будет проигнорирован т.к. он не в корне
-/*.rar
-# Игнорировать css файлы из папки bar не включая подпапки
-# Допустим файл /bar/temp/main.css не будет проигнорирован т.к. он в подпапке temp
-/bar/*.css
-# Игнорировать js файлы из папки bar и подпапок, если таковые будут
-/bar/**.*.js
+# # Игнорировать html файлы
+# *.html
+# # Но конкретно foo.html не игнорировать
+# !foo.html
+# # Игнорировать rar файлы в корне проекта
+# # Допустим файл /temp/main.rar не будет проигнорирован т.к. он не в корне
+# /*.rar
+# # Игнорировать css файлы из папки bar не включая подпапки
+# # Допустим файл /bar/temp/main.css не будет проигнорирован т.к. он в подпапке temp
+# /bar/*.css
+# # Игнорировать js файлы из папки bar и подпапок, если таковые будут
+# /bar/**.*.js
+
+# исключить все файлы расширения .jpg
+*.jpg
+
+# исключить папку в корневом каталоге
+/venv
+
+# игнорировать все файлы в папке 
+dirname/
+
+# игнорировать все файлы определенного расширеняия в папке 
+dirname/*.txt
